added a lot of stuff...

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,8 @@
   <p>Welcome, <%= current_user.name %></p>
   <%= link_to("Logout", logout_path, method: :delete) %>
    <% if current_user.admin? %>
-    <%= link_to("Admin Dashboard", admin_path) %>
+     <%= link_to("Admin Dashboard", admin_path) %>
+<% else %>
+  <% redirect_to(signup_path) %>
   <% end %>
 <% end %>
-
