fixed column issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
       <nav>
-        <% link_to("Home", root_path) %>
+        <%= link_to("Home", root_path) %>
       </nav>
     <%= yield %>
   </body>
