--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,9 @@
      <%= link_to("Admin Dashboard", admin_path) %>
    <% end %>
  <% else %>
-   <p class="login_alert">OOOOOOOhhhhhh. you need to log innnnnnnn.... yeaaaaa.........</p>
+   <p class="alert">😱😱 OOOOOOOhhhhhh 😱😱<br />
+   you need to log innnnnnnn.... yeaaaaa.........<br />
+   👇 </p>
    <%= link_to("Login", login_path)%>
    <%= link_to("Signup", signup_path)%>
   <% end %>
