had to update gemfile after merge. Added some css and paths to other pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 
   <body>
       <nav>
-        <%= link_to("Home", root_path) %>
+        <%= link_to("Home", root_path) %> 🍕
+        <%= link_to("Schools", )%> 🍕
+        <%= link_to("Courses")%> 🍕
+        <%= link_to("New Account", signup_path) %> 🍕
       </nav>
     <%= yield %>
   </body>
