--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,14 +2,16 @@
 
 <% if current_user %>
   <p>Welcome, <%= current_user.name %></p>
-  <%= link_to("Logout", logout_path, method: :delete) %>
+  <br />
+  <%= link_to("Logout", logout_path, method: :delete) %> 🍕
    <% if current_user.admin? %>
-     <%= link_to("Admin Dashboard", admin_path) %>
+     <%= link_to("Admin Dashboard", admin_path) %> 🍕
+     <%= link_to("Logout", logout_path, method: :delete) %> 🍕
    <% end %>
  <% else %>
    <p class="alert">😱😱 OOOOOOOhhhhhh 😱😱<br />
    you need to log innnnnnnn.... yeaaaaa.........<br />
    👇 </p>
-   <%= link_to("Login", login_path)%>
-   <%= link_to("Signup", signup_path)%>
+   <%= link_to("Login", login_path)%> 🍕
+   <%= link_to("Signup", signup_path)%> 🍕
   <% end %>
